# pica-clipboard

./: Cargo.toml
docs/: ARCHITECTURE.md  DEV_SETUP.md  FUNCTIONAL_SPEC.md  PRD.md  PROJECT_TREE.md  SQLdesign.md
src/: lib.rs  main.rs
src/core/: clipboard.rs  database.rs  manager.rs  mod.rs  types.rs
src/ui/: app.slint  window.rs
src/utils/: crypto.rs  mod.rs  paths.rs  text.rs
