[package]
name = "picaclip"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "picaclip"
path = "src/main.rs"

[dependencies]
slint = { version = "1.8", features = ["backend-winit", "renderer-femtovg"] }
tokio = { version = "1.40", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3.4"
image = "0.25"
sha2 = "0.10"
chrono = "0.4"
regex = "1.10"
directories = "5.0"
# global-hotkey = "0.5"
# tray-icon = "0.14"
aes-gcm = "0.10"
base64 = "0.22"
enigo = "0.2"
# rdev = "0.5"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.8"
